# functional_testing

./: .gitignore  README.md  asfdjkasdf  functional_tests.md  pyproject.toml  test_fasta
created_tests/: README.md  test_all.md  test_contig.md  test_mutation_ecoli.md  test_species_ecoli.md
env_ft/: pyvenv.cfg
src/functional_testing/: __main__.py
src/functional_testing/create_tests/: generate_test_type.py  markdown_builder.py  test_creator.py
src/functional_testing/ft_base_init/: create_command.py  create_test_base.py  filenames_sorting.py
src/functional_testing/helper_scripts/: create_dir_struc.py  filenames_sorting.py  input_control.py  read_json_dic.py  replace_paths.py  split_fasta.py  switch_working_dir.py
src/functional_testing/input_control/: mutation_control.py  species_control.py
test_temp/pointfinder_blast/tmp/: out_16S-rrsC.xml  out_23S.xml  out_ampC-promoter-size-53bp.xml  out_folP.xml  out_gyrA.xml  out_gyrB.xml  out_parC.xml  out_parE.xml  out_pmrA.xml  out_pmrB.xml  out_rpoB.xml
test_temp/resfinder_blast/tmp/: out_aminoglycoside.xml  out_beta-lactam.xml  out_colistin.xml  out_fosfomycin.xml  out_fusidicacid.xml  out_glycopeptide.xml  out_macrolide.xml  (+10 more)
tests/: _commands.md  test_functional_tests.md  test_generate_test.md  understanding_json.ipynb
tests/create_tests/: test_generate_test.md  test_markdown_builder.md
tests/data/: functional_tests.md
tests/ft_base_init/: filenames_sorting.md
tests/helper_scripts/: test_create_dir_structure.md  test_input_control.md  test_replace_paths.md  test_split_fasta.md  test_switch_working_dir.md
