[project]
name = "functional_testing"
version = "0.1.0"
description = "A package to easily conduct functional tests for cge tools"
authors = [
    {name = "nilhof01", email = "s220672@dtu.dk"},
]
dependencies = [
    "editdistance",
    "markdown",
    "cgelib>=0.7.3",
    "cgecore==1.5.6",
    "tabulate>=0.8.9",
    "pandas>=1.4.2",
    "biopython>=1.79",
    "resfinder==4.4.2"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]

test = [
    "pytest>=7.4.3",
]

[tool.pdm.scripts]
test = "python -m pytest tests/"
